# ORCCopy

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.cc  tool.cc  tool.h
